NetBSD Problem Report #43941

From www@NetBSD.org  Mon Oct  4 15:40:30 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id F2AAD63B9F9
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  4 Oct 2010 15:40:29 +0000 (UTC)
Message-Id: <20101004154029.BC79E63B8F3@www.NetBSD.org>
Date: Mon,  4 Oct 2010 15:40:29 +0000 (UTC)
From: greg@kerr1.com
Reply-To: greg@kerr1.com
To: gnats-bugs@NetBSD.org
Subject: joe 3.7nb1 crashes on netbsd-current/amd64 (5.99.39) when calling tgetent
X-Send-Pr-Version: www-1.0

>Number:         43941
>Category:       lib
>Synopsis:       joe 3.7nb1 crashes on netbsd-current/amd64 (5.99.39) when calling tgetent
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Oct 04 15:45:00 +0000 2010
>Closed-Date:    Wed Mar 30 07:53:37 +0000 2011
>Last-Modified:  Mon Apr 11 21:15:02 +0000 2011
>Originator:     Greg Kerr
>Release:        5.99.39
>Organization:
AuthenTec
>Environment:
NetBSD lev.mlb.akua.com 5.99.39 NetBSD 5.99.39 (AKUA-100905-$Revision: lev-60-a (G1.285) amd64 $) #8: Sun Oct  3 10:47:54 EST 2010  akua@lev.mlb.akua.com:/usr/src.current/sys/arch/amd64/compile/obj/lev-60-b amd64

>Description:
 $ gdb joe
GNU gdb 6.5
This GDB was configured as "x86_64--netbsd"...

(gdb) r
Starting program: /usr/pkg/bin/joe
(no debugging symbols found)
Processing '/usr/pkg/etc/joe/joerc'...Processing '/usr/pkg/etc/joe/ftyperc'...done

Program received signal SIGSEGV, Segmentation fault.
0x00007f7ffc803250 in tgetent () from /usr/lib/libterminfo.so.1

>How-To-Repeat:
cd /usr/pkgsrc/editors/joe
make install
joe

>Fix:
Workaround

export TERM=

(Set TERM to empty, unsetting or any value will not work)

Don't know fix unfortunately

>Release-Note:

>Audit-Trail:
From: Jukka Ruohonen <jruohonen@iki.fi>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: lib/43941: joe 3.7nb1 crashes on netbsd-current/amd64 (5.99.39) when calling tgetent
Date: Tue, 29 Mar 2011 20:06:45 +0300

 On Mon, Oct 04, 2010 at 03:45:00PM +0000, greg@kerr1.com wrote:
 > (gdb) r
 > Starting program: /usr/pkg/bin/joe
 > (no debugging symbols found)
 > Processing '/usr/pkg/etc/joe/joerc'...Processing '/usr/pkg/etc/joe/ftyperc'...done
 > 
 > Program received signal SIGSEGV, Segmentation fault.
 > 0x00007f7ffc803250 in tgetent () from /usr/lib/libterminfo.so.1
 >
 > >Fix:
 > Workaround
 > 
 > export TERM=
 > 
 > (Set TERM to empty, unsetting or any value will not work)

 Sigh. Yet another regression no one cared about. I'll try to investigate
 this a little, but in the meantime: a better workaround would be

 	export JOETERM=""

 - Jukka.

From: Greg Kerr <greg.kerr@akua.com>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: lib/43941: joe 3.7nb1 crashes on netbsd-current/amd64 (5.99.39)
 when calling tgetent
Date: Tue, 29 Mar 2011 17:08:26 -0400

 Thanks for your reply. I reverted that machine back to 5.1 as I had to 
 use it productively. I still have a -current here though; I'll see if 
 this is still an issue after updating.

   - Greg

 On 2011-03-29 13:10, Jukka Ruohonen wrote:
 > The following reply was made to PR lib/43941; it has been noted by GNATS.
 >
 > From: Jukka Ruohonen<jruohonen@iki.fi>
 > To: gnats-bugs@NetBSD.org
 > Cc:
 > Subject: Re: lib/43941: joe 3.7nb1 crashes on netbsd-current/amd64 (5.99.39) when calling tgetent
 > Date: Tue, 29 Mar 2011 20:06:45 +0300
 >
 >   On Mon, Oct 04, 2010 at 03:45:00PM +0000, greg@kerr1.com wrote:
 >   >  (gdb) r
 >   >  Starting program: /usr/pkg/bin/joe
 >   >  (no debugging symbols found)
 >   >  Processing '/usr/pkg/etc/joe/joerc'...Processing '/usr/pkg/etc/joe/ftyperc'...done
 >   >
 >   >  Program received signal SIGSEGV, Segmentation fault.
 >   >  0x00007f7ffc803250 in tgetent () from /usr/lib/libterminfo.so.1
 >   >
 >   >  >Fix:
 >   >  Workaround
 >   >
 >   >  export TERM=
 >   >
 >   >  (Set TERM to empty, unsetting or any value will not work)
 >
 >   Sigh. Yet another regression no one cared about. I'll try to investigate
 >   this a little, but in the meantime: a better workaround would be
 >
 >   	export JOETERM=""
 >
 >   - Jukka.
 >

From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43941 CVS commit: pkgsrc/editors/joe
Date: Tue, 29 Mar 2011 21:38:26 +0000

 Module Name:	pkgsrc
 Committed By:	roy
 Date:		Tue Mar 29 21:38:26 UTC 2011

 Modified Files:
 	pkgsrc/editors/joe: Makefile distinfo
 Added Files:
 	pkgsrc/editors/joe/patches: patch-ac

 Log Message:
 joe only uses termcap so......
 Depend on termcap instead of ncurses
 Replace curses.h and term.h includes with termcap.h
 Fixes PR lib/43941


 To generate a diff of this commit:
 cvs rdiff -u -r1.33 -r1.34 pkgsrc/editors/joe/Makefile
 cvs rdiff -u -r1.15 -r1.16 pkgsrc/editors/joe/distinfo
 cvs rdiff -u -r0 -r1.7 pkgsrc/editors/joe/patches/patch-ac

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Wed, 30 Mar 2011 07:53:37 +0000
State-Changed-Why:

Confirmed to be fixed, thanks.



From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43941 CVS commit: src/lib/libterminfo
Date: Mon, 11 Apr 2011 21:13:09 +0000

 Module Name:	src
 Committed By:	roy
 Date:		Mon Apr 11 21:13:09 UTC 2011

 Modified Files:
 	src/lib/libterminfo: term.h termcap.h

 Log Message:
 POSIX says that term.h should define tgetstr and friends
 Fixes PR lib/43941


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/lib/libterminfo/term.h
 cvs rdiff -u -r1.1 -r1.2 src/lib/libterminfo/termcap.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.