POSIX says that term.h should define tgetstr and friends Fixes PR lib/43941